# CMake_template

./: .gitignore  CMakeLists.txt  CMakeLists_8txt.html  Makefile  README.md  codecov.yml  conanfile.txt  dir_08ebf401352d0c333d3a643fc2ed36cf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  lib_8cpp.html  lib_8cpp__incl.map  lib_8cpp__incl.md5  lib_8h.html  lib_8h__dep__incl.map  lib_8h__dep__incl.md5  lib_8h__incl.map  lib_8h__incl.md5  lib_8h_source.html  my__lib_2CMakeLists_8txt.html
.github/workflows/: documentation.yaml  ubuntu.yaml  windows.yaml
App/: CMakeLists.txt  main.cpp
Src/: CMakeLists.txt
Tests/: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
cmake/: AddGitSubmodule.cmake  CodeCoverage.cmake  Docs.cmake
configured/: config.hpp.in
search/: all_2.js  all_3.js  all_4.js  all_5.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js
src/: CMakeLists.txt
src/my_lib/: CMakeLists.txt  lib.cpp  lib.h
tests/: CMakeLists.txt  main.cpp
